[package]
name = "dit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.9"
ptree2 = "1.0.0"
colored = "2.1.0"
dit_id_generator = { git = "https://github.com/divinoschaeffer/dit_id_generator.git", branch = "master" }
dit_file_encryptor = { git = "https://github.com/divinoschaeffer/dit_file_encryptor.git", branch = "main" }
repository_tree_creator = { git = "https://github.com/divinoschaeffer/repository_tree_creator.git", branch = "master" }
log = "0.4.22"

[dev-dependencies]
tempdir = "0.3.7"